--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.3.2",
     "date-fns": "^2.6.0",
     "vue": "^2.6.10",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.1.3",
     "vuetify": "^2.1.0",
     "vuex": "^3.1.1"
